GH#35: feat: markers lane, Changes section and notes (annotations)
